--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -46,9 +46,15 @@ K.Holt note: some of this may be best in guidance paper?
 CW: Consider changing this title to Review of Reference Points in Canada with focus on Pacific Salmon
 
 I did not define CU, LRP and SMU in the paragraphs below. May be needed if these acronyms were not defined before.
+
+Also, I used the term "LRP" for SMU and "lower benchmark" for individual CUs. I *think* this is consistent with how CH and KH use it. But I am not sure if this is an obvious difference to the average reader.  Maybe it would be good to clarify this in the text? Perhaps in the intro section above? Something like:
+
+Throughout this text we use the term "Limit Reference Point" (LRP) to indicate the reference points associated with the salmon stock management units (SMU). The SMUs are often composed of multiple conservation units (CUs), which represent biological populations for which management quantities are also estimated. Management limits for individual CUs are termed "lower benchmarks" throughout this text. 
+
+Some people may use the terms "reference point"  and "management benchmak" interchangeably. -- M
  -->
 
-Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. The DFO policy documents "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@dfoCanadaPolicyConservation2005] already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015]. For Pacific Salmon, lower benchmarks are generally estimated for each CU. These lower benchmarks are the basis for assessing CU status and establishing LRPs for SMUs (groups of CUS). The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been adopted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], Fraser coho [@dfoWildSalmonPolicy2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
+Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. The DFO policy documents "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@dfoCanadaPolicyConservation2005] already recommended the establishment of reference points to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015]. For Pacific Salmon, lower benchmarks are generally estimated for each CU. These lower benchmarks are the basis for assessing CU status and establishing LRPs for SMUs (groups of CUS). The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been adopted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], Fraser coho [@dfoWildSalmonPolicy2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
 
 
 <!--
