--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -19,8 +19,12 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
 
-The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone (@canadaCanadaPolicyConservation2005, @grant2017FraserSockeye2020). While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP. When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark that has been identified as important for individual CUs by local experts. A variety of methods are available for estimating lower benchmarks depending on species and data availability (@holtIndicatorsStatusBenchmarks2009, @holtEvaluatingBenchmarksBiological2018, @grant2017FraserSockeye2020]. 
+The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@canadaCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (cite Pestal et all tech report). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark that has been identified as important for individual CUs by local experts. A variety of methods are available for estimating lower benchmarks depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020]. 
  
+<!--
+  CW: Reference, is the WSP author DFO or Canada? I have seen it cited in both ways in CSAS papers, an dI think I was using the DFO version as it is what Julie Marentette used in her 2021 papers.-- should I change it to the canada citation  (@canadaCanadaPolicyConservation2005) ?
+-->
+
 
 ## PROPORTION-BASED LRPS
 
@@ -77,7 +81,7 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 We initially considered an alternative approach to logistic regression in which the LRP represents the aggregate abundance that has historically been associated with a pre-specified proportion of CUs being above their lower benchmark. Using this approach, CU-level status was quantified as the number or CUs with status > LBM for each year of observed data.  A logistic regression was then fit to predict the proportion of CUs with status > LBM as a function of aggregate spawner abundance to the SMU (i.e., abundance from nCUs combined). We do not show present this method for our case studies however due to inherent limitations when the required proportion of CUs above their lower benchmarks is 100%. Equation \@ref(eq:logisticLRP) cannot be solved directly for a threshold proportion of $p^*$ = 100%, and LRP estimates were highly sensitive to the choice of $p^*$ value used as a proxy. Using $p^*$ = 99% vs. $p^*$ = 99.9% vs. $p^*$ = 99.99% gave very different LRP estimates. 
 
 
-##### Logistic Regression Model Diagnostics  
+##### Logistic Regression Model Diagnostics
 
 There are several assumptions associated with logistic regression, of which four that are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. All analyses were implemented using R v.4.0.4 unless otherwise specified [@rcoreteamLanguageEnvironmentStatistical2021].  The four assumptions are as follows:
 
