--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -198,11 +198,23 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information.     
 
-We used the samSim modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations (@holtQuantitativeToolEvaluating2020b, @freshwaterBenefitsLimitationsIncreasing2020). We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
+We used the samSim modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020b; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
+
+<!--
+Suggest changing paragraph above to:
+
+We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
+
+
+-->
 
 Updated functionality for the LRP version of samSim include:
-<!-- KH comment: Not sure if these updates are neccessary here ... this text could be moved to the appendix? - or, just put in the github readme for the LRP branch of samSim?? -->
+<!-- KH comment: Not sure if these updates are neccessary here ... this text could be moved to the appendix? - or, just put in the github readme for the LRP branch of samSim?? 
+
+CW: I think this might be too much detail here. I suggest moving it to the appendix and the github readme. 
+
+-->
 
 * The option to sample stock recruitment parameter sets directly from an estimated Bayesian joint posterior distribution.
 
@@ -214,7 +226,22 @@ Updated functionality for the LRP version of samSim include:
 
 * Specification of variability in exploitation rates as a function of both variability among years and variability among CUs.
 
+<!--
+CW: the paragraphs below this point should remain in this section
+-->
+
 Detailed descriptions of the parameterization of samSim for our two case study applications of abundance-based projected LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Chapters 3 and 4, respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. Furthermore, we were only applying a simple fixed ER harvest strategy when projecting forward, so annual variability arising from observation error would be accounted for by our specification of between-year variability in ERs.  
+
+<!-- CW: I am not sure if the last sentence of the above paragraph is true. Observation error only affects the perceived population, while error in between -year ER affect the "true" (simulated) population. I suggest removing the sentence. 
+
+  Furthermore, we were only applying a simple fixed ER harvest strategy when projecting forward, so annual variability arising from observation error would be accounted for by our specification of between-year variability in ERs.  
+
+
+
+-->
+
+
+
 
 The following steps were taken to calculate projected LRPs using samSim:
 
