--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -41,7 +41,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 ### Previous assessments
 
-Declines in IF Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Evidence of a new, lower productivity regime starting in return year 1994 has been documented [@deckerAssessmentInteriorFraser2014] that coincides with declines in spawner abundances. In 2002, the IF Coho stock management unit was designated 'endangered; by the  Committee on the Status of Endangered Wildlife in Canada (COSWEIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU). Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) lead to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; [@dfoWildSalmonPolicy2015]). As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status designation for the IF Coho DU from 'endangered' to 'threatened' [@cosewic_cosewic_2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
+Declines in IF Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Evidence of a new, lower productivity regime starting in return year 1994 has been documented [@deckerAssessmentInteriorFraser2014] that coincides with declines in spawner abundances. In 2002, the IF Coho stock management unit was designated 'endangered; by the  Committee on the Status of Endangered Wildlife in Canada (COSEWIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU). Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) lead to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; [@dfoWildSalmonPolicy2015]). As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status designation for the IF Coho DU from 'endangered' to 'threatened' [@cosewic_cosewic_2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
 
 ### History of aggregate-abundance based reference points
 
@@ -55,7 +55,7 @@ Data for this case study cover return years 1998 -2020. Data prior to 1998 were 
 
 The exploitation rate time series is a large source of uncertainty for Interior Fraser coho. Exploitation rates are only available at the SMU-level, so are assumed constant among all CUs, which is unlikely to be true. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct spawner-recruit time series, errors in exploitation rates will propagate through to estimates of stock recruitment parameters, relative abundance-based benchmarks such as $S_{gen}$, and covaration in recruitment residuals. Additional sources of uncertainty in Interior Fraser coho data sets include observation errors in spawner abundance estimates and estimates of age-at-maturity. Spawner abundance estimates are largely derived from visual surveys. Scale sampling to determine age structure is incomplete at at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019]
 
-
+<!-- Is the sentence below supposed to be removed? -->
 The scale sampling is incomplete as there are years without any scales, others with small sample sizes, and limited spatial representation within CUs.
 
 
@@ -68,7 +68,7 @@ We consider three alternative ways to characterize CU status when developing LRP
 2) CU-level abundance relative to $S_{gen}$
 3) Distribution related to IFCRT-distributional target
 
-The first approach uses the multidimensional rapid scanning tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)). This method is used when developing proportion-based LRPs. In comparison, both the second and third approaches are primarily used when developing aggregate abundance-based LRPs. 
+The first approach uses the multidimensional rapid scanning tool developed by the State of the Salmon program (Section \@ref(#rapidToolMethods)). This method is used when developing proportion-based LRPs. In comparison, both the second and third approaches are primarily used when developing aggregate abundance-based LRPs. 
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of $S_{gen}$, where CU status is considered poor when abundance drops below $S_{gen}$. The value of $S_{gen}$ represents the number of spawners required to recover to $S_{MSY}$ (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. $S_{gen}$ is one of several benchmarks available for assigning mutlidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
 
@@ -77,9 +77,13 @@ The third approach is based on the distribution of spawning escapement among sub
 
 ### Estimation of Sgen{#cohoSgen}
 
-Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase SRep compared to the base model. SRep is the spawner abundance level at which the stock replaces itself; the relationship between SRep and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on SRep and depensatory mortality were included. was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis.   
+Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase SRep compared to the base model. SRep is the spawner abundance level at which the stock replaces itself; the relationship between SRep and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on SRep  <!--$S_{REP}$ --> and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis.   
 
-@kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated dataset lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution for the productivity parameter. Using the individual model approach avoided needing to make a decision. Secondly, our hierarchical model was unable to converge on an LRP solution in several years between 2015 and 2020, including the most recent year (2020). Thirdly, because all CUs had equal amounts of data, the commonly cited benefit of hierarchical models allowing data-poor systems to borrow information from data-rich systems did not apply. While future stock recruit analyses for Interior Fraser Coho may wish to re-visit the hierarchical model, we do not expect our decision to apply an individual modelling approach here will affect out general conclusions.
+<!-- CW: Perhaps this was already done in @kormanEvaluationFrameworkAssessing2019 or @arbeiderInteriorFraserCoho2020, but it may be good to explain that the marine survival covariate is the based on data from hatchery indicator stocks and because of that they are not CU specific. or are they? -->
+
+@kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated dataset lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution <!--prior-->  for the productivity parameter. Using the individual model approach avoided needing to make a decision <!--suggest: Using the individual model approach removed prior influence on model results -->. Secondly, our hierarchical model was unable to converge on an LRP solution in several years between 2015 and 2020, including the most recent year (2020). Thirdly, because all CUs had equal amounts of data, the commonly cited benefit of hierarchical models allowing data-poor systems to borrow information from data-rich systems did not apply. While future stock recruit analyses for Interior Fraser Coho may wish to re-visit the hierarchical model, we do not expect our decision to apply an individual modelling approach here will affect out general conclusions.
+
+
 
 The formulations for our two stock recruitment models using the assumption of independent productivity among CUs are described below. 
 
@@ -98,6 +102,8 @@ The base Ricker stock recruit model formulation was:
 
 TO DO: Need to add lognormal bias correction factor to equations!!!!!!!!!!!!!!!!!
 
+<!-- why did we choose to represent recuitment with a hat $\hat{R}$. I understand that recruitment is always estimated, but so is spawners. I usually do not see the hat symbol in either spawners or recruits -->
+
 where,
 
 $\hat{R}_{i,a,t}$ = the predicted number of natural origin recruits from CU $i$ of age $a$ returning in year $t$ (i.e., recruits that were produced by escapement in brood year $t-a$)
@@ -110,7 +116,7 @@ $\alpha_i$ = productivity parameter for CU $i$
 
 $\gamma$ = marine survival co-efficient shared among CUs
 
-$m_{t-1}$ = hatchery marine survival index (smolt-to-adult) for sea entry in year t-1
+$m_{t-1}$ = hatchery marine survival index (smolt-to-adult) <!--shared among CUs--> for sea entry in year t-1
 
 $\beta_i$ = density dependent term describing the rate of decrease in log-survival for CU $i$ with increasing spawner abundance
 
@@ -128,7 +134,7 @@ This model formulation is similar to the Ricker model used in @arbeiderInteriorF
 
 *Model 2: Ricker_priorCap*
 
-To maintain consistency with this previous work on Interior Fraser Coho, we also consider a version of the Ricker model that uses an informative prior distribution on $S_{REP}$ to increase carrying capacity.  @kormanEvaluationFrameworkAssessing2019 suggested that the Ricker model with a survival co-variate (Model 1) over-estimated compensatory dynamics at high spawner abundances when applied only to data from 1998 onwards.  They noted that spawner abundances since 1998 have been much lower than historic levels.  Given that sparse data at high spawner abundances makes it difficult to estimate carrying capacity, base Ricker estimates of carrying capacity may be unreliable [@kormanEvaluationFrameworkAssessing2019]. Furthermore, they observed that one brood line had persisted at a relatively higher and more stable spawner abundance than the other two brood lines, which they viewed as evidence for a higher capacity than the base Ricker model estimates. Based on these concerns, @kormanEvaluationFrameworkAssessing2019 proposed an alternative Ricker model that used an informative prior distribution to increase carrying capacity (represented as the spawner abundance at which the stock replaces itself, $S_{REP}$). @arbeiderInteriorFraserCoho2020 followed the approach of [@kormanEvaluationFrameworkAssessing2019] by considering both the base Ricker model and a version of the Ricker model with an informative prior distribution on $S_{REP}$ to be plausible when providing management advice.
+To maintain consistency with this previous work on Interior Fraser Coho, we also consider a version of the Ricker model that uses an informative prior distribution on $S_{REP}$ to increase carrying capacity.  @kormanEvaluationFrameworkAssessing2019 suggested that the Ricker model with a survival co-variate (Model 1) over-estimated compensatory dynamics at high spawner abundances when applied only to data from 1998 onwards.  They noted that spawner abundances since 1998 have been much lower than historic levels.  Given that sparse data at high spawner abundances makes it difficult to estimate carrying capacity, base Ricker estimates of carrying capacity may be unreliable [@kormanEvaluationFrameworkAssessing2019]. Furthermore, they observed that one brood line had persisted at a relatively higher and more stable spawner abundance than the other two brood lines, which they viewed as evidence for a higher capacity than the base Ricker model estimates. Based on these concerns, @kormanEvaluationFrameworkAssessing2019 proposed an alternative Ricker model that used an informative prior distribution to increase carrying capacity (represented as the spawner abundance at which the stock replaces itself, $S_{REP}$). @arbeiderInteriorFraserCoho2020 followed the approach of @kormanEvaluationFrameworkAssessing2019 by considering both the base Ricker model and a version of the Ricker model with an informative prior distribution on $S_{REP}$ to be plausible when providing management advice.
 
 
 \begin{equation}
@@ -148,15 +154,18 @@ knitr::include_graphics("figure/coho-compareSRFits-IM.png")
 ```
 
 
-## LRP Estimation: Proportion of CUs  
+## LRP Estimation: Proportion of CUs
 
 ### Methods
 
-We looked at the proportion of CUs that had multi-dimensional rapid status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= $S_{gen}$ and upper benchmark \= 0.8$S_{MSY}$) when assessing multi-dimensional rapid stats: the base Ricker model and the Ricker_priorCap model. Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status.
+We looked at the proportion of CUs that had multi-dimensional rapid status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= $S_{gen}$ and upper benchmark \= 0.8$S_{MSY}$) when assessing multi-dimensional rapid status: the base Ricker model and the Ricker_priorCap model. Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status.
+
+<!--This last sentence above is confusing with the full retrospective analysis presented later
+Remove: Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status. -->
 
 For comparison, we also looked at the proportion of CUs that were below $S_{gen}$ in each year and the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners.  
 
-### Results  
+### Results
 
 Estimates of $S_{gen}$ based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix ...). As a result, generational average spawning abundances  was more likely to drop below $S_{gen}$ when it was estimated using the Ricker_priorCap. Under the base Ricker model formulation, generational average spawning abundance remained above $S_{gen}$ for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below $S_{gen}$ in one or more years for Lower Thompson CU (2006), Middle Fraser CU (2006, 2008), and South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). As a result, at least one CU had stock status assessed as below $S_{gen}$ for 5 of the 21 years between 2000 and 2020.
 
@@ -166,7 +175,7 @@ When CU status was assessed using the multidimensional scanning tool with abunda
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
 ```
 
-```{r coho-CU-multiDim-RickerCap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had multidimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-Ricker-Cap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had multidimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker-Cap.png")
 ```
 
@@ -183,7 +192,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 We evaluated aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmark considered: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recuit models were used to estimate $S_{gen}$, we distinguish these models as 'Sgen:LRP' and 'Sgen_priorCap:LRP' for the Ricker and Ricker_priorCap models, respectively. See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
 When estimating logistic regression LRPs using $S_{gen}$, we used an integrated modelling approach in which CU-level $S_{gen}$ and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components: 
-(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen))
+(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen)) <!-- Eq adjProd not  found-->
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
